# vent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  package_dmg.sh  release.sh  test_smc.sh
.github/ISSUE_TEMPLATE/: compatibility_report.yml
.github/workflows/: ci.yml  release.yml
docs/: LAUNCH_PLAN.md
gui/FanControlGUI/: Package.swift
gui/FanControlGUI/Sources/FanControlGUI/: ContentView.swift  DaemonClient.swift  FanControlGUIApp.swift
gui/FanControlGUI/Sources/FanControlGUI/Resources/: MacFanControl.icns
gui/VentGUI/: Package.swift  build_tests.sh
gui/VentGUI/Sources/VentGUI/: CardBackground.swift  ContentView.swift  DaemonClient.swift  FanMenuBarIcon.swift  NativeSlider.swift  OnboardingView.swift  VentGUIApp.swift  VentUtils.swift
gui/VentGUI/Sources/VentGUI/Resources/Base.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/de.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/es.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/fr.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/ja.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/ko.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/pt-BR.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/ru.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUI/Resources/zh-Hans.lproj/: Localizable.strings
gui/VentGUI/Sources/VentGUIExecutable/: main.swift
gui/VentGUI/Tests/VentGUITests/: VentGUITests.swift
include/: daemon_client.h  daemon_ipc.h  fan_control_config.h  fan_controller.h  smc_backend.h  smc_types.h  vent_config.h
src/: daemon_client.cpp  daemon_ipc.cpp  fan_controller.cpp  fanctld.cpp  intel_smc_backend.cpp  intel_smc_backend.h  main.cpp  smc_backend.cpp  smc_types.cpp  ventd.cpp
tests/: unit_tests.cpp
